Add swagger to auth endpoints
